# communityvibe

./: .gitignore  .replit  LICENSE  README.md  alembic.ini  pyproject.toml  pytest.ini  replit.nix  requirements.txt
alembic/: env.py
alembic/versions/: 0cba16788431_initial_migration.py  4b433582f0f3_add_categories_field.py  add_additional_data_column.py  add_openai_analysis_columns.py  add_user_actions_table.py  f25150626450_add_users_table.py  fc12327ac3ec_merge_heads.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: __init__.py  posts.py  reddit.py  twitter.py  user_actions.py  users.py
app/core/: config.py  logging_config.py
app/core/keywords/: keywords.json
app/crud/: __init__.py  base.py  crud_user_action.py  post.py  user.py
app/db/: session.py
app/models/: __init__.py  post.py  user.py  user_action.py
app/schemas/: post.py  user.py  user_action.py
app/services/: keyword_service.py  openai_service.py  reddit_service.py  scheduler.py  sentiment_service.py  twitter_service.py
app/tasks/: post_processing.py  scheduler.py  worker.py
scripts/: count_posts.py  db_connection_guide.md  list_categories.py  save_keyword_searches.py  test_and_view_data.py  test_api_filtering.py  test_keyword_categorization.py  test_reddit.py  update_sentiments.py
tests/: conftest.py
tests/database/: test_post_crud.py
tests/e2e/: test_posts_endpoint.py
tests/integration/: test_categorization.py  test_full_pipeline.py  test_real_data_collection.py  test_twitter_openai_integration.py
tests/unit/: test_openai_service.py
(+1 files in other folders)
